# yarp-example

./: README.md
example1/: CMakeLists.txt  hello.txt  receiver.cpp  sender.cpp
example2/: CMakeLists.txt  hello_module.cpp
example3/: CMakeLists.txt  summer.cpp
example4/rpc_client/: CMakeLists.txt  rpc_client.cpp
example4/rpc_server/: CMakeLists.txt  rpc_server.cpp
example5/: CMakeLists.txt  SharedData.cpp  SharedData.h  SharedData.thrift  SharedData_index.txt  sender.cpp
